fixed typeform overflow issue

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -97,3 +97,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.typeform-embed {
+  width: 90vw !important;
+  overflow: hidden !important;
+}
